<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Palestra Android</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="email">Email</string>
    <string name="salvar">Salvar</string>
    <string name="titulo_formulario">Cadastro Participante</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="opcoes">Opções</string>
    <string name="dialog_participante_title">Participante</string>
    <string name="confirmacao_presenca">Confirma Presença?</string>
    <string name="sim">Sim</string>
    <string name="nao">Nao</string>
    <string name="receber_lista">Baixar lista</string>
    <string name="lista_participantes">Lista de Participantes</string>
    <string name="enviar_lista">Enviar Lista</string>
    <string name="alert_image_content_description">Alert Image</string>
    <string name="tamanhoP">P</string>
    <string name="tamanhoM">M</string>
    <string name="tamanhoG">G</string>
    <string name="tamanhoDaBlusa">Tamanho da blusa</string>
    <string name="tamanhoGG">GG</string>

</resources>
