<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/edit_nome_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edit_telefone_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/endereco" />

        <EditText
            android:id="@+id/edit_endereco_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/edit_email_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailSubject" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cursos"
            android:layout_marginTop="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/spinnerBackground">

            <Spinner
                android:id="@+id/spinner_cursos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

    </LinearLayout>

</ScrollView>

